// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeBlock > matches snapshot with basic props 1`] = `
<div
  class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
>
  <div
    class="relative"
  >
    <pre
      class="overflow-hidden dark:hidden"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="token"
          style="color: rgb(166, 38, 164);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(64, 121, 242);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(80, 161, 79);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(56, 58, 66);"
        >
          ;
        </span>
      </code>
    </pre>
    <pre
      class="hidden overflow-hidden dark:block"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="token"
          style="color: rgb(198, 120, 221);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(97, 175, 239);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(152, 195, 121);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(171, 178, 191);"
        >
          ;
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`CodeBlock > matches snapshot with children 1`] = `
<div
  class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
>
  <div
    class="relative"
  >
    <pre
      class="overflow-hidden dark:hidden"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="token"
          style="color: rgb(166, 38, 164);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(64, 121, 242);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(80, 161, 79);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(56, 58, 66);"
        >
          ;
        </span>
      </code>
    </pre>
    <pre
      class="hidden overflow-hidden dark:block"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="token"
          style="color: rgb(198, 120, 221);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(97, 175, 239);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(152, 195, 121);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(171, 178, 191);"
        >
          ;
        </span>
      </code>
    </pre>
    <div
      class="absolute top-2 right-2 flex items-center gap-2"
    >
      <button
        type="button"
      >
        Copy
      </button>
    </div>
  </div>
</div>
`;

exports[`CodeBlock > matches snapshot with line numbers 1`] = `
<div
  class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
>
  <div
    class="relative"
  >
    <pre
      class="overflow-hidden dark:hidden"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="linenumber react-syntax-highlighter-line-number"
          style="display: inline-block; min-width: 2.5rem; padding-right: 1rem; text-align: right; user-select: none; color: rgb(160, 161, 167); font-style: italic;"
        >
          1
        </span>
        <span
          class="token"
          style="color: rgb(166, 38, 164);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(64, 121, 242);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(80, 161, 79);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(56, 58, 66);"
        >
          ;
        </span>
      </code>
    </pre>
    <pre
      class="hidden overflow-hidden dark:block"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="linenumber react-syntax-highlighter-line-number"
          style="display: inline-block; min-width: 2.5rem; padding-right: 1rem; text-align: right; user-select: none; color: rgb(92, 99, 112); font-style: italic;"
        >
          1
        </span>
        <span
          class="token"
          style="color: rgb(198, 120, 221);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(97, 175, 239);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(152, 195, 121);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(171, 178, 191);"
        >
          ;
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`CodeBlockCopyButton > matches snapshot 1`] = `
<div
  class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
>
  <div
    class="relative"
  >
    <pre
      class="overflow-hidden dark:hidden"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="token"
          style="color: rgb(166, 38, 164);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(64, 121, 242);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(80, 161, 79);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(56, 58, 66);"
        >
          ;
        </span>
      </code>
    </pre>
    <pre
      class="hidden overflow-hidden dark:block"
      style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
    >
      <code
        class="font-mono text-sm"
        style="white-space: pre;"
      >
        <span
          class="token"
          style="color: rgb(198, 120, 221);"
        >
          const
        </span>
        <span>
           test 
        </span>
        <span
          class="token"
          style="color: rgb(97, 175, 239);"
        >
          =
        </span>
        <span>
           
        </span>
        <span
          class="token"
          style="color: rgb(152, 195, 121);"
        >
          "hello"
        </span>
        <span
          class="token"
          style="color: rgb(171, 178, 191);"
        >
          ;
        </span>
      </code>
    </pre>
    <div
      class="absolute top-2 right-2 flex items-center gap-2"
    >
      <button
        class="btn btn-sm gap-2 shrink-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
